<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KalkulatorActivity">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_angka1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5669C9"
            android:hint="@string/masukan_angka_pertama"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_angka2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5669C9"
            android:hint="@string/masukan_angka_kedua"
            android:minHeight="48dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_marginTop="20dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_tambah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0D47A1"
                android:text="@string/tambah"
                android:textSize="20sp"
                android:padding="15dip" />

            <Button
                android:id="@+id/btn_kurang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0D47A1"
                android:text="-"
                android:textSize="20sp"
                android:padding="15dip" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_kali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0D47A1"
                android:text="@string/x"
                android:textSize="20sp"
                android:padding="15dip" />
            <Button
                android:id="@+id/btn_bagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0D47A1"
                android:text="@string/bagi"
                android:textSize="20sp"
                android:padding="15dip"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_samadengan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0D47A1"
            android:text="@string/sama"
            android:textSize="30sp"
            android:padding="10dip"
            android:paddingStart="60dp"
            android:paddingEnd="60dp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasilnya_adalah"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hasil"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="20sp"/>
</LinearLayout>