<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inputnamaActivity">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_nama"
            android:layout_marginTop="30dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5669C9"
            android:hint="@string/masukan_namamu"/>
        <Button
            android:layout_marginTop="10dip"
            android:layout_marginStart="130dip"
            android:layout_marginEnd="130dip"
            android:id="@+id/btn_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0D47A1"
            android:text="@string/cetak_hasil" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="20sp"
            android:text="Hallo, Namaku :"/>
        <TextView
            android:layout_marginTop="5dip"
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/xebec"/>
    </LinearLayout>

</ScrollView>